# project02/routes/index.js
@@ -1,13 +1,27 @@
 const router = require("express").Router();
+const passport = require("passport");
 
 router.use("/", require("./swagger"));
 
-router.get("/", (req, res) => {
-  //#swagger.tags=["Hello World"]
-  res.send("Hello World");
-});
+// router.get("/", (req, res) => {
+//   //#swagger.tags=["Hello World"]
+//   res.send("Hello World");
+// });
 
 router.use("/books", require("./books"));
 router.use("/authors", require("./authors"));
+
+router.get("/login", passport.authenticate("github"), (req, res) => {
+  //#swagger.tags=["Authentication"]
+});
+router.get("/logout", function (req, res, next) {
+  //#swagger.tags=["Authentication"]
+  req.logout(function (err) {
+    if (err) {
+      return next(err);
+    }
+    res.redirect("/");
+  });
+});
 
 module.exports = router;
